[Feat] - Create 2 Roles [Developer and Admin] [Feat] - Slicing halaman login [Feat] - Create Logic Login 2 Roles

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -9,3 +9,18 @@
     --font-sans: 'Instrument Sans', ui-sans-serif, system-ui, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
         'Segoe UI Symbol', 'Noto Color Emoji';
 }
+
+*{
+    @apply md:text-base sm:text-base text-sm;
+}
+
+.bg-custom-blue {
+    background-color: #1F305A;
+}
+
+.ring-custom-blue {
+    --tw-ring-color: #1F305A;
+    --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+    --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(3px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+    box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
+}
