Feat : Mmebuat halaman reservation Feat : Membuat halaman Availibility (calendar)

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -2,6 +2,11 @@
 
 @import 'tailwindcss';
 
+@import "flowbite/src/themes/default";
+@plugin "flowbite/plugin";
+@source "../../node_modules/flowbite";
+@import "./flowbite-custom.css";
+
 @source '../../vendor/laravel/framework/src/Illuminate/Pagination/resources/views/*.blade.php';
 @source '../../storage/framework/views/*.php';
 @source '../**/*.blade.php';
