Feat : create akun partner Feat : create role partner Adjustment : get data reservation, product and availibility by partner

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -770,5 +770,5 @@ span.flatpickr-weekday,
 }
 
 .flatpickr-innerContainer{
-  @apply justify-center;
+  @apply justify-start sm:justify-center !w-full !overflow-auto;
 }
