Fix : kalender jangan geser ( all role)

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -770,5 +770,13 @@ span.flatpickr-weekday,
 }
 
 .flatpickr-innerContainer{
-  @apply justify-start sm:justify-center !w-full !overflow-auto;
+  @apply !justify-center !w-full !overflow-auto;
+}
+
+.flatpickr-calendar.inline {
+  @apply !top-0 !right-0 !left-0 !bottom-0 w-full !p-1 !m-0;
+}
+
+span.flatpickr-weekday, .flatpickr-day{
+  @apply !text-xs md:!text-sm;
 }
